--- a/5d-JWT/.env.example
+++ b/5d-JWT/.env.example
@@ -4,3 +4,11 @@ PORT=3000
 
 # Format: postgresql://<USER>:<PASSWORD>@<HOST>:<PORT>/<DATABASE>
 DATABASE_URL=postgresql://postgres:password@localhost:5432/postgres
+
+# JWT
+JWT_SECRET = '';
+JWT_ALGO = '';
+JWT_EXPIRY = '';
+
+# Bcrypt
+SALT_ROUNDS = 10;
